--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ matrix:
           packages:
             - powershell
 install:
-  - pwsh Install-BuildPrerequisite.ps1
+  - pwsh Install-BuildPrerequisite.ps1 -Elevated
 script:
   - pwsh -f "setup-scripts/test.ps1"
