--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ matrix:
 install:
   - pwsh Install-BuildPrerequisite.ps1
 script:
-  - pwsh Invoke-Build.ps1 -Jenkins
+  - pwsh Invoke-Build.ps1
   - pwsh -f "setup-scripts/test.ps1"
