--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,5 @@
 image: Visual Studio 2015
 build: false
 build_script:
+  - ps: .\Invoke-BuildPrerequisite.ps1
   - ps: .\Invoke-Build.ps1 -AppVeyor
