--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,3 +7,5 @@ before_build:
   - ps: .\Install-BuildPrerequisite.ps1
 build_script:
   - ps: .\Invoke-Build.ps1 -AppVeyor
+after_build:
+  - ps: .\setup-scripts\Install-JDK-Tests.ps1  
