--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ matrix:
           packages:
             - powershell
 install:
-  - pwsh Install-BuildPrerequisite.ps1
-script:
-  - pwsh Invoke-Build.ps1
+  - pwsh -f "/setup-scripts/Install-JDK.ps1"
+# script:
+#   - pwsh Invoke-Build.ps1
