--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ matrix:
           packages:
             - powershell
 install:
-  - pwsh -f "${env:TRAVIS_BUILD_DIR}/Install-BuildPre.ps1"
+  - pwsh -f Install-BuildPre.ps1
 # script:
 #   - pwsh Invoke-Build.ps1
