added git config

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,8 +4,9 @@ branches:
     - test
 build: false
 before_build:
+  - ps: .\Set-GitConfiguration.ps1 -reply S.Jacob s@to.com
   - ps: .\Install-BuildPrerequisite.ps1
 build_script:
   - ps: .\Invoke-Build.ps1 -AppVeyor
 after_build:
-  - ps: .\setup-scripts\Install-JDK-Tests.ps1  
+  - ps: .\setup-scripts\Install-JDK-Tests.ps1
